# vs-placebo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deband.c  deband.h  dovi_meta.h  meson.build  meson_options.txt  pyproject.toml  render.c  render.h  resample.c  resample.h  shader.c  tonemap.c  tonemap.h  vs-placebo.c  vs-placebo.h
.github/workflows/: build.yml  windows.yml
cibw/: before_all_linux.sh  before_all_macos.sh
libp2p/: main.c  p2p_api.h
libplacebo/: config.h
src/: deband.c  deband.h  dovi_meta.h  meson.build  resample.c  resample.h  shader.c  shader.h  tonemap.c  tonemap.h  vs-placebo.c  vs-placebo.h
subprojects/: libp2p.wrap  libplacebo.wrap
subprojects/packagefiles/libp2p-f50288b0c8db2cb14bb98fc25a5f056609d03652/: meson.build  meson_options.txt
