[build-system]
requires = ["meson-python", "VapourSynth>=74"]
build-backend = "mesonpy"

[project]
name = "vs-placebo"
description = "A VapourSynth plugin interface to libplacebo"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1"
authors = [
    {name = "Lypheo"},
    {name = "quietvoid", email = "tcChlisop0@gmail.com"},
    {name = "sgt0"}
]
keywords = ["video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth>=74"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Lypheo/vs-placebo.git"
Issues = "https://github.com/Lypheo/vs-placebo/issues"

[tool.meson-python.wheel]
exclude = ["*.dll.a", "*.lib"]

[tool.meson-python.args]
install = ['--skip-subprojects']
